# decentralized-exchange

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  truffle-config.js
abi/: LPToken.abi  LiquidityPool.abi  MyToken.abi
contracts/: LPToken.sol  LiquidityPool.sol  MyToken.sol
migrations/: 1_deploy_contracts.js
scripts/: deploy_token.js
src/: lib.rs  liquidity_pool.rs  lp_token.rs  main.rs  my_token.rs
test/: liquidity_pool.js
tests/: liquidity_pool_tests.rs
