[package]
name = "decentralized-exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = "0.18.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
log = "0.4"
env_logger = "0.11.3"
clap = { version = "4.1", features = ["derive"] }

[dev-dependencies]
rusty-hook = "0.11.2"